# watermarkipy

./: pyproject.toml
src/: watermark.py
